--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ numpy==1.25.0
 pandas==2.0.2
 plotly==5.15.0
 requests==2.31.0
-streamlit==1.23.1
+streamlit
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 scikit-learn==1.3.0
